Hotfix for movement shift-action-expending triggering a sidebar refresh for all users. This will also only track movement-shifts during combat now. Fixed a related issue with token-actors.
Hotfix for movement shift-action-expending triggering a sidebar refresh for all users. This will also only track movement-shifts during combat now. Fixed a related issue with token-actors.

--- a/css/main.css
+++ b/css/main.css
@@ -165,3 +165,16 @@ body.messages-dark-theme .chat-controls .roll-type-select {
 #chat-log.dark-theme {
   margin-bottom: 5px;
 }
+
+/* .ptu-sidebar .window-content {
+  overflow-y: hidden !important;
+} */
+
+.ptu-sidebar .window-content::-webkit-scrollbar {
+  display: none;
+}
+
+.ptu-sidebar .window-content {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
